--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "param": "^1.0.1",
     "pump": "^1.0.0",
     "request": "^2.45.0",
+    "root": "^1.1.0",
     "send": "^0.9.3",
     "streaming-format": "^1.1.0",
     "websocket-stream": "^1.0.2",
@@ -18,13 +19,11 @@
   "devDependencies": {},
   "scripts": {
     "start": "node server.js",
-    "dev-html": "cat web/index.html | format --domain dev.try-dat.com:8080 > build/index.html",
-    "dev-js": "browserify web/index.js --debug > build/bundle.js",
-    "dev": "npm run dev-html; npm run dev-js",
-    "html": "cat web/index.html | format --domain workshop.mathiasbuus.eu > build/index.html",
-    "js": "browserify web/index.js > build/bundle.js",
-    "build": "npm run html; npm run js"
+    "install": "browserify web/index.js > web/bundle.js"
   },
   "author": "Mathias Buus",
+  "bin": {
+    "try-dat": "./server.js"
+  },
   "license": "MIT"
 }
