better persistance logic

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,7 +1,7 @@
-from ubuntu:14.04
-run apt-get update && apt-get -y install sudo curl git-core build-essential libgraphicsmagick1-dev vim python ruby1.9.3
-run curl -fs https://raw.githubusercontent.com/mafintosh/node-install/master/install | sh && node-install 0.10.32
-run npm install -g dat@6.8.1 expose-fs@1.0.1
-add .spawn .bashrc /
-workdir /root
-entrypoint /.spawn
+FROM ubuntu:14.04
+RUN apt-get update && apt-get -y install sudo curl git-core build-essential libgraphicsmagick1-dev vim python ruby1.9.3
+RUN curl -fs https://raw.githubusercontent.com/mafintosh/node-install/master/install | sh && node-install 0.10.32
+RUN npm install -g dat@6.8.1 expose-fs@1.0.1
+ADD .spawn .bashrc /
+WORKDIR /root
+ENTRYPOINT /.spawn
