--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "browser.js",
   "dependencies": {
     "browserify": "^6.1.0",
+    "cors": "^2.4.2",
     "docker-browser-console": "^2.0.1",
     "freeport": "^1.0.3",
     "minimist": "^1.1.0",
@@ -17,7 +18,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js",    
+    "start": "node server.js",
     "build": "browserify web/index.js > web/bundle.js"
   },
   "author": "Mathias Buus",
