--- a/package.json
+++ b/package.json
@@ -2,24 +2,11 @@
   "name": "try-dat",
   "version": "1.1.2",
   "description": "try dat using docker",
-  "main": "browser.js",
   "dependencies": {
-    "browserify": "^6.1.0",
-    "cors": "^2.4.2",
-    "docker-browser-console": "^2.0.1",
-    "freeport": "^1.0.3",
-    "minimist": "^1.1.0",
-    "pump": "^1.0.0",
-    "request": "^2.45.0",
-    "root": "^1.1.0",
-    "send": "^0.9.3",
-    "websocket-stream": "^1.0.2",
-    "ws": "^0.4.32"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
-    "build": "browserify web/index.js > web/bundle.js"
+    "start": "node server.js"
   },
   "author": "Mathias Buus",
   "license": "MIT",
